--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
     }
 }
 
-def room_version = "2.2.4"
+def room_version = "2.2.5"
 //def work_version = "2.3.3"
 
 dependencies {
@@ -42,6 +42,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.2.0'
     testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'com.google.truth:truth:0.42'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
