--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
     dataBinding {
         enabled = true
     }
+
+    testOptions.unitTests.includeAndroidResources = true
 }
 
 def room_version = "2.2.5"
@@ -38,15 +40,18 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
 
-    //testing
+    //Testing
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
     testImplementation 'com.google.truth:truth:0.42'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.test.ext:junit:1.1.1"
 
-    //room
+    //Room
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
     // optional - Kotlin Extensions and Coroutines support for Room
