--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     //Testing
-    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.2.0'
     testImplementation 'org.mockito:mockito-core:2.19.0'
     testImplementation 'com.google.truth:truth:0.42'
@@ -50,6 +50,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "androidx.test.ext:junit:1.1.1"
+    debugImplementation("androidx.fragment:fragment-testing:1.2.4")
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
