--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     implementation "androidx.room:room-guava:$room_version"
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+
+    def dagger_version = "2.27"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 //
 //    //work manager
 //    implementation "androidx.work:work-runtime:$work_version"
