--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     testOptions.unitTests.includeAndroidResources = true
 }
 
+//TODO move versions here
 def room_version = "2.2.5"
 //def work_version = "2.3.3"
 
@@ -43,7 +44,7 @@ dependencies {
     //Testing
     androidTestImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'org.mockito:mockito-core:3.3.1'
     testImplementation 'com.google.truth:truth:0.42'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
