added dagger for testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.whatscooking.MyCustomTestRunner"
     }
     buildTypes {
         release {
@@ -23,13 +23,17 @@ android {
     }
     dataBinding {
         enabled = true
+        enabledForTests = true
     }
 
-    testOptions.unitTests.includeAndroidResources = true
+    testOptions.unitTests {
+        includeAndroidResources = true
+    }
 }
 
 //TODO move versions here
 def room_version = "2.2.5"
+def dagger_version = "2.27"
 //def work_version = "2.3.3"
 
 dependencies {
@@ -42,15 +46,21 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     //Testing
-    androidTestImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.2.0'
     testImplementation 'org.mockito:mockito-core:3.3.1'
     testImplementation 'com.google.truth:truth:0.42'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "androidx.test.ext:junit:1.1.1"
+
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "com.google.dagger:dagger:$dagger_version"
+    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+
+
+
     debugImplementation("androidx.fragment:fragment-testing:1.2.4")
 
     //Room
@@ -65,7 +75,6 @@ dependencies {
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
-    def dagger_version = "2.27"
     implementation "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 //
