--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,15 @@ android {
 //TODO move versions here
 def room_version = "2.2.5"
 def dagger_version = "2.27"
-//def work_version = "2.3.3"
+def work_manager_version = "2.3.3"
+def espresso_support_version = "3.0.2"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
 
@@ -58,9 +59,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "com.google.dagger:dagger:$dagger_version"
     androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
-    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.2') {
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_support_version"
+    androidTestImplementation ("com.android.support.test.espresso:espresso-contrib:$espresso_support_version") {
         // Necessary to avoid version conflicts
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
@@ -71,7 +71,7 @@ dependencies {
     androidTestImplementation "com.android.support.test:rules:1.0.2"
     androidTestImplementation "com.android.support.test:runner:1.0.2"
 
-    debugImplementation("androidx.fragment:fragment-testing:1.2.4")
+    debugImplementation("androidx.fragment:fragment-testing:1.2.5")
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -87,15 +87,15 @@ dependencies {
 
     implementation "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-//
+
 //    //work manager
-//    implementation "androidx.work:work-runtime:$work_version"
+//    implementation "androidx.work:work-runtime:$work_manager_version"
 //    // Kotlin + coroutines
-//    implementation "androidx.work:work-runtime-ktx:$work_version"
+//    implementation "androidx.work:work-runtime-ktx:$work_manager_version"
 //    // optional - RxJava2 support
-//    implementation "androidx.work:work-rxjava2:$work_version"
+//    implementation "androidx.work:work-rxjava2:$work_manager_version"
 //    // optional - GCMNetworkManager support
-//    implementation "androidx.work:work-gcm:$work_version"
+//    implementation "androidx.work:work-gcm:$work_manager_version"
 //    // optional - Test helpers
-//    androidTestImplementation "androidx.work:work-testing:$work_version"
+//    androidTestImplementation "androidx.work:work-testing:$work_manager_version"
 }
