--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        def gradle_version = "3.6.3"
+        def nav_version = "2.3.0-rc01"
+
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
