--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     testOptions.unitTests {
         includeAndroidResources = true
     }
+    viewBinding {
+        enabled = true
+    }
 
     apply plugin: "androidx.navigation.safeargs"
 }
