--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     }
     androidTestImplementation "com.android.support.test:rules:1.0.2"
     androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     debugImplementation("androidx.fragment:fragment-testing:1.2.5")
 
@@ -91,8 +92,8 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 
     //Navigation
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
 
     //work manager
 //    implementation "androidx.work:work-runtime:$work_manager_version"
