--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        def gradle_version = "3.6.3"
+        def gradle_version = '4.0.1'
         def nav_version = "2.3.0-rc01"
 
         classpath "com.android.tools.build:gradle:$gradle_version"
