--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,20 @@ android {
         enabled = true
         enabledForTests = true
     }
-
     testOptions.unitTests {
         includeAndroidResources = true
     }
     viewBinding {
         enabled = true
+    }
+    sourceSets {
+        String sharedTestDir = 'src/sharedTest/java'
+        test {
+            java.srcDir sharedTestDir
+        }
+        androidTest {
+            java.srcDir sharedTestDir
+        }
     }
 
     apply plugin: "androidx.navigation.safeargs"
