--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,31 +53,33 @@ def room_version = "2.2.5"
 def dagger_version = "2.27"
 def work_manager_version = "2.3.4"
 def espresso_support_version = "3.0.2"
-def gson_version = "2.7"
+def gson_version = "2.8.5"
+def nav_version = "2.3.0"
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation "com.google.code.gson:gson:$gson_version"
 
     //Unit Testing
-    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.mockito:mockito-core:3.3.1'
     testImplementation 'com.google.truth:truth:1.0'
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "androidx.test.ext:junit:1.1.1"
+    testImplementation "androidx.test.ext:junit:1.1.2"
 
     //Android tests
     androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "com.google.dagger:dagger:$dagger_version"
     androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_support_version"
@@ -90,7 +92,8 @@ dependencies {
     }
     androidTestImplementation "com.android.support.test:rules:1.0.2"
     androidTestImplementation "com.android.support.test:runner:1.0.2"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     debugImplementation("androidx.fragment:fragment-testing:1.2.5")
 
