added retrofit and injecting ExecutorService

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ def work_manager_version = "2.3.4"
 def espresso_support_version = "3.0.2"
 def gson_version = "2.8.5"
 def nav_version = "2.3.0"
+def retrofit_version = "2.9.0"
 
 
 dependencies {
@@ -68,6 +69,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.1'
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     //Unit Testing
     testImplementation 'androidx.test:core:1.3.0'
