--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "androidx.test.ext:junit:1.1.2"
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
 
     //Android tests
     androidTestImplementation 'junit:junit:4.12'
